--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Robin Lepoutre est un tatoueur guadeloupéen qui vous permet de réaliser vos envies. Son cabinet se situe au centre de l'île à Jarry."
 		/>
 		<!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
 		<!--
